Removed hyphens and added anchor links

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -12,12 +12,30 @@ description:
 [Andrew Smith](https://w3.ibm.com/bluepages/profile.html?uid=4G8681897),
 [Andrea Garcia](https://w3.ibm.com/bluepages/profile.html?uid=4G0746897)
 
+<PageDescription>
+  The Create pattern offers simple (single step) and complex (multistep)
+  variations in one of the following formats: Modal, Side panel, Narrow
+  tearsheet, Wide tearsheet, and Full page.
+</PageDescription>
+
+<AnchorLinks>
+  <AnchorLink>Overview</AnchorLink>
+  <AnchorLink>Inline creation</AnchorLink>
+  <AnchorLink>Modal</AnchorLink>
+  <AnchorLink>Side panel</AnchorLink>
+  <AnchorLink>Narrow tearsheet</AnchorLink>
+  <AnchorLink>Wide tearsheet</AnchorLink>
+  <AnchorLink>Full page</AnchorLink>
+  <AnchorLink>Designing with creation flows</AnchorLink>
+  <AnchorLink>Related use cases</AnchorLink>
+  <AnchorLink>Accessibility</AnchorLink>
+  <AnchorLink>Related</AnchorLink>
+</AnchorLinks>
+
 ## Overview
 
 Users often need to create different types of assets - they can have simple or
-complex requirements. The Create pattern offers simple (single step) and complex
-(multistep) variations in one of the following formats: Modal, Side panel,
-Narrow tearsheet, Wide tearsheet, and Full-page.
+complex requirements.
 
 To create is to generate a new resource. Creating is distinct from adding, but
 the two are often confused. To add a resource is to include a resource that
@@ -27,14 +45,14 @@ creating a new resource.
 
 Do not use this pattern for [adding or editing a resource](#Related-use-cases).
 
-| Type             | Usage       | Context     |
-| ---------------- | ----------- | ----------- |
-| Inline           | Use with quick, simple creations like that of an item. | On-page content can be seen and interacted with. |
-| Modal            | Use with simple or transitional creations with no more than a couple of form fields. | On-page content is obscured. |
-| Side-panel       | Use with medium complexity creations if the user needs page context. | On-page content can be seen and interacted with. |
-| Narrow tearsheet | Use with medium complexity creations. | On-page content is obscured. |
-| Wide tearsheet   | Use with complex or interactive creations. | On-page content is obscured. |
-| Full page        | Use with creations that must be completed in order for a service to be usable. | N/A |
+| Type             | Usage                                                                                | Context                                          |
+| ---------------- | ------------------------------------------------------------------------------------ | ------------------------------------------------ |
+| Inline           | Use with quick, simple creations like that of an item.                               | On-page content can be seen and interacted with. |
+| Modal            | Use with simple or transitional creations with no more than a couple of form fields. | On-page content is obscured.                     |
+| Side-panel       | Use with medium complexity creations if the user needs page context.                 | On-page content can be seen and interacted with. |
+| Narrow tearsheet | Use with medium complexity creations.                                                | On-page content is obscured.                     |
+| Wide tearsheet   | Use with complex or interactive creations.                                           | On-page content is obscured.                     |
+| Full page        | Use with creations that must be completed in order for a service to be usable.       | N/A                                              |
 
 ## Inline creation
 
@@ -259,7 +277,7 @@ options" will replace the progress indicator with the In-page navigation anchor
 links. Depending on your use case, you may choose to persist the toggle to show
 all options for a particular Create flow if it will enhance the user experience.
 
-If the user toggles off the advanced options and there could be destructive 
+If the user toggles off the advanced options and there could be destructive
 consequences, show a modal alerting them that the changes won't be saved.
 
 <Row>
@@ -352,9 +370,9 @@ consequences, show a modal alerting them that the changes won't be saved.
 <Row>
 <Column colLg={8}>
 
-![Upcoming 80px fluid button height in the Full-page flow](images/FullPageAlignment80px.jpg)
+![Upcoming 80px fluid button height in the Full page flow](images/FullPageAlignment80px.jpg)
 
-<Caption>Upcoming 80px fluid button height in the Full-page flow</Caption>
+<Caption>Upcoming 80px fluid button height in the Full page flow</Caption>
 </Column>
 </Row>
 
@@ -367,14 +385,14 @@ links.
 
 #### Do:
 
-- In Cloud and Cognitive, the Full-page create flow is the process the user must
+- In Cloud and Cognitive, the Full page create flow is the process the user must
   complete in order to use a product or service.
 - In IBM Cloud public, it is the alternative to the Provisioning flow for a
   non-billable service.
 
 #### Don't:
 
-- Don't use the Full-page option when the product or service is usable before
+- Don't use the Full page option when the product or service is usable before
   the current creation flow is initiated.
 - For IBM Public Cloud, do not use this when provisioning a service directly
   from the Catalog, or when creating a non-billable resource that could happen
