comms: medium article carbon 2021 release

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -109,6 +109,19 @@ building websites and user interfaces.
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    color="dark"
+    title="What’s coming to Carbon in 2021"
+    author="Josh Black"
+    date="November 12, 2020"
+    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
+    >
+
+![Carbon 2021 release](./homepage/images/carbon_2021.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
 
 <ArticleCard
     color="dark"
@@ -132,19 +145,6 @@ building websites and user interfaces.
     >
 
 ![Hacktoberfest 2020](./homepage/images/2020_hacktoberfest.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    color="dark"
-    title="Sharing components across teams"
-    author="Anna Gonzales"
-    date="September 23, 2020"
-    href="https://medium.com/carbondesign/sharing-components-across-teams-b2335681c4aa "
-    >
-
-![Component index](./homepage/images/component_index.png)
 
 </ArticleCard>
 </Column>
