--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -21,6 +21,18 @@ about design systems.
 
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="What’s coming to Carbon in 2021"
+    author="Josh Black"
+    date="November 12, 2020"
+    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
+    >
+
+![Carbon 2021 release](/images/carbon_2021.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
 
 <ArticleCard
     title="Color palettes and accessibility features for data visualization"
