chore(docs): update style docs for breadcrumb, codesnippet

--- a/src/pages/components/breadcrumb/style.mdx
+++ b/src/pages/components/breadcrumb/style.mdx
@@ -8,11 +8,14 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                         | Property | Color token           |
-| ----------------------------- | -------- | --------------------- |
-| `.bx--link`                   | color    | `$link-01`            |
-| `.bx--link:hover`             | color    | `$hover-primary-text` |
-| `.bx--breadcrumb-item::after` | color    | `$text-01`            |
+| Class                                     | Property | Color token           |
+| ----------------------------------------- | -------- | --------------------- |
+| `.bx--link`                               | color    | `$link-01`            |
+| `.bx--link:hover`                         | color    | `$hover-primary-text` |
+| `.bx--link:active`                        | color    | `$text-01`            |
+| `.bx--link:focus`                         | outline  | `$focus`              |
+| `.bx--breadcrumb-item::after`             | color    | `$text-01`            |
+| `.bx--breadcrumb-item--current .bx--link` | color    | `$text-01`            |
 
 ## Typography
 
