--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -110,7 +110,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Class                       | Property         | Color token      |
 | --------------------------- | ---------------- | ---------------- |
-| `.bx--btn--danger--primar`  | text color       | `$text-04`       |
+| `.bx--btn--danger--primary` | text color       | `$text-04`       |
 | `.bx--btn__icon`            | svg              | `$icon-03`       |
 | `.bx--btn--danger--primary` | background-color | `$support-01`    |
 | `:hover`                    | background-color | `$hover-danger`  |
@@ -180,9 +180,9 @@ recommended by design as the proper distance between buttons.
 
 ## Sizes
 
-There are three common button sizes: default, field, and small. Each button
-type can use any of these three sizes based on need. The fourth button size,
-full bleed, has a more reserved application and should rarely be used.
+There are three common button sizes: default, field, and small. Each button type
+can use any of these three sizes based on need. The fourth button size, full
+bleed, has a more reserved application and should rarely be used.
 
 | Button size | Height (px / rem) | Use case                                                                           |
 | ----------- | ----------------- | ---------------------------------------------------------------------------------- |
