--- a/src/pages/components/link/style.mdx
+++ b/src/pages/components/link/style.mdx
@@ -18,7 +18,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | ----------- | ---------- | --------------------- |
 | `:hover`    | text color | `$hover-primary-text` |
 | `:active`   | text color | `$text-01`            |
-| `:focus`    | border     | `$focus`              |
+| `:focus`    | outline    | `$focus`              |
 | `:visited`  | text color | `$visited-link`       |
 | `:disabled` | text color | `$disabled-02`        |
 
