docs: restructure of content topics

--- a/src/pages/guidelines/content/action-labels.mdx
+++ b/src/pages/guidelines/content/action-labels.mdx
@@ -2,11 +2,12 @@
 label:
   Content design can make or break an online experience. Always strive for
   writing that is clear, concise, and on-brand.
-title: Content
+title: Action labels
 description:
-  Content design can make or break an online experience. Always strive for
-  writing that is clear, concise, and on-brand.
-tabs: ['Overview', 'Guidance', 'Action labels']
+  Users rely on consistent labels for common actions to predict how to interact
+  with an interface. This list includes the common UI terms and recommended
+  action labels for use in IBM UI content and documentation.
+tabs: ['Overview', 'Writing style', 'Content patterns', 'Action labels']
 ---
 
 import GlossaryComponent from 'components/GlossaryComponent';
