--- a/src/pages/guidelines/content/writing-style.mdx
+++ b/src/pages/guidelines/content/writing-style.mdx
@@ -1,27 +1,28 @@
 ---
-title: Content
+title: Writing style
 description:
-  Inconsistencies in grammar and style interrupt concentration. Help users focus
-  on your product by following these guidelines and applying them consistently.
-tabs: ['Overview', 'Guidance', 'Action labels']
+  Writing should always be simple, clear, and easy to understand. Using everyday
+  language keeps the tone friendly, human, and inviting. And choose short words
+  over long impressive-sounding words. Put the thesaurus away!
+tabs: ['Overview', 'Writing style', 'Content patterns', 'Action labels']
 ---
 
 <PageDescription>
 
-Inconsistencies in grammar and style interrupt concentration. Help users focus
-on your product by following these guidelines and applying them consistently.
+Writing should always be simple, clear, and easy to understand. Using everyday
+language keeps the tone friendly, human, and inviting. And choose short words
+over long impressive-sounding words. Put the thesaurus away!
 
 </PageDescription>
 
 <AnchorLinks>
 
 <AnchorLink>Capitalization</AnchorLink>
-<AnchorLink>Verb tense</AnchorLink>
+<AnchorLink>Simple writing</AnchorLink>
+<AnchorLink>Pronouns</AnchorLink>
 <AnchorLink>Active and passive voice</AnchorLink>
-<AnchorLink>First and second person</AnchorLink>
-<AnchorLink>Formal vs. casual tone</AnchorLink>
+<AnchorLink>Conversational style</AnchorLink>
 <AnchorLink>Can, may, and might</AnchorLink>
-<AnchorLink>References</AnchorLink>
 
 </AnchorLinks>
 
@@ -260,6 +261,56 @@ formatting (but not both).
   />
 </DoDontRow>
 
+## Simple writing
+
+### Use simple words and sentences
+
+Use the simplest term that is appropriate for your audience. For example, use
+large instead of voluminous, and use small instead of diminutive.
+
+Be succinct, and keep sentences as short and simple as possible. Omit wordy or
+redundant phrases.
+
+TIP: Create a terminology list of words for your product that includes preferred
+words and words not to use. This simple tool can help with consistency over
+time, especially if multiple are writing copy.
+
+Respect the users' time and make things quick and easy to read. Always trim back
+to as few words as possible, although don't be terse.
+
+Terms of politeness are superfluous, convey the wrong tone for technical
+material, and are not regarded the same way in all cultures. Use please in a UI
+only when the user is being inconvenienced.
+
+### Use simple present tense
+
+Use simple verbs and tenses, and keep sentences concise, simple, friendly, and
+punchy. Focus on the user's context and make content relevant. The more familiar
+you are with their context, the better you can communicate without using a lot
+of words.
+
+If you need to use past or future tense, avoid verb tenses with the words have,
+has, had, been, should, would, and will.
+
+## Pronouns
+
+Engage your readers by using second person (you, your) where appropriate. Avoid
+the first person unless you have a compelling reason to use it. First person (I,
+we, our) focuses on the writer rather than the audience, which is rarely
+appropriate in UI or technical contexts.
+
+One exception to this is in the case of possessive adjectives in the UI. You can
+use first person in headings or labels that are very specific to the user or
+customer data, for example “My account” or “My usage.” However, in explanatory
+text for the heading or label, switch to second person. For example, “Your usage
+is calculated from the 1st day of the month.”
+
+Where appropriate, use first person ("we", "our") to refer to IBM.
+
+For more detailed guidance about pronouns, refer to the
+[Pronouns](https://www-03preprod.ibm.com/support/knowledgecenter/ibm_style/pronouns.html)
+topic in IBM Style.
+
 ## Active and passive voice
 
 The _active voice_ is direct and punchy, and emphasizes the subject of the
@@ -305,6 +356,27 @@ secondary, passive voice can be acceptable.
     aspectRatio="1:1"
   />
 </DoDontRow>
+
+## Conversational style
+
+To set the appropriate tone and conversation level, it helps to imagine the user
+engaging with the product as if in a conversation. The interplay between words,
+imagery, and interactions forms the conversation, a back-and-forth that takes
+place on the glass, between the user and the product.
+
+The conversational level is determined by where the user is in the journey, and
+the task they are performing at that time. The most conversational content is
+usually found in the "discover, try, and buy" phases of the journey. Probably
+the least conversational content can be found in error messages where an economy
+of words is desirable.
+
+Whatever the conversational level, the writing should always be simple, clear,
+and easy to understand. And keep the tone friendly, human, and inviting. Use
+everyday language, not jargon. And choose short words to make the reading
+faster, rather than long impressive-sounding words. Put the thesaurus away!
+
+IBM Style offers more guidelines on
+[conversation style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa/page/Conversational%20style).
 
 ## First and second person
 
