--- a/src/pages/guidelines/content/overview.mdx
+++ b/src/pages/guidelines/content/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Content
+title: Overview
 description:
   Well-designed content empowers people to use our offerings with ease. Words
   form the conversation a user has with a product, working with the visual
@@ -7,15 +7,7 @@ description:
   content guidelines have been developed from real-life examples to ensure the
   words in your product interfaces and documentation create the best possible
   experience for your users.
-tabs:
-  [
-    'Overview',
-    'Guidance',
-    'Content patterns',
-    'Principles',
-    'Mechanics',
-    'Action labels',
-  ]
+tabs: ['Overview', 'Writing style', 'Content patterns', 'Action labels']
 ---
 
 <PageDescription>
@@ -30,7 +22,7 @@ is writing or reviewing copy in IBM product interfaces.
 
 <AnchorLink>Content foundations</AnchorLink>
 <AnchorLink>Voice and tone</AnchorLink>
-<AnchorLink>Conversational style</AnchorLink>
+<AnchorLink>Inclusive terminology</AnchorLink>
 <AnchorLink>Writing for accessibility</AnchorLink>
 <AnchorLink>Questions</AnchorLink>
 
@@ -93,21 +85,35 @@ full sentences and friendly explanations.
 The underlying voice in each case is consistent but with different word choices
 and a different sentence structure, the style and tone adapts.
 
-## Conversational style
+## Inclusive terminology
 
-To set the appropriate tone, it helps to imagine the user engaging with the
-product as if in a conversation. The interplay between words, images, and
-interactions forms the conversation, a back-and-forth that takes place on the
-glass, between the user and the product.
+It is critical that all words used in any capacity in product offerings be
+inclusive in its language.
 
-The conversational level is determined by where the user is in the journey, and
-the task they are performing at that time. The most conversational content is
-usually found in the "discover, try, and buy" phases of the journey. And the
-least conversational content can be found in UI labels and error messages where
-an economy of words is desirable.
+The following terms represent guidance that content designers can use to improve
+the inclusiveness of our offerings:
 
-IBM Style offers more guidelines on
-[conversation style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa/page/Conversational%20style).
+- The terms "blacklist" and "whitelist" are prohibited for future use. Instead,
+  use the terms "blocklist" and "allowlist". To refer to the action of adding
+  items to a blocklist or allowlist, use the verbs "block" and "allow".
+- The term "slave" is prohibited in all IBM content, along with the term
+  "master" in the sense of "superior". Instead of slave, use another term such
+  as "worker", "child", "helper", "replica", or "secondary". Instead of
+  "master," use a term such as "controller", "leader", "manager", "main",
+  "coordinator", "parent", or "primary".
+- When you must refer to prohibited terms because they occur in a product from
+  another company, make it clear that these terms are not from IBM. Use the
+  verbs "block" and "allow" to refer to the action of adding items to another
+  company's "blacklist" or "whitelist".
+
+Refer to the [IBM Terminology database](http://ibm.biz/termsearch) for more
+information.
+
+Anyone at
+IBM can [submit a term for review](http://tlwi.w3-969.ibm.com/standards/terminology/feedbackform2.html).
+
+For more information, see
+the [Inclusive IT Terminology](https://w3.ibm.com/w3publisher/inclusive-it-terminology/take-action) site.
 
 ## Writing for accessibility
 
@@ -133,102 +139,3 @@ about a particular use case, you can ask questions in the
 [Carbon Slack channel](#carbon-design-system), open a Github issue, or connect
 with us in one of our
 [meetups](https://www.carbondesignsystem.com/whats-happening/meetups).
-
-<div>
-<Row class="narrativeTable">
-
-<Column colLg={4} noGutter>
-
-### Engineered
-
-</Column>
-
-<Column colLg={8} noGutter>
-
-IBM illustrations should feel engineered with a strong sense of balance and
-control. Precise use of the grid, along with consistent shapes, angles and
-radii, help define a particular aesthetic that’s critical in expressing the
-“IBMness” of our illustrations and reveals a well-considered and systematic
-approach.
-
-</Column>
-
-</Row>
-
-<Row class="narrativeTable">
-
-<Column colLg={4} noGutter>
-
-### Clear
-
-</Column>
-
-<Column colLg={8} noGutter>
-
-IBM illustration should never work too hard or be burdened with too many ideas.
-Only essential, non-decorative, elements should be used to communicate the main
-idea. Keeping an illustration simple and straightforward adds clarity. This
-simplicity helps guide viewers through complex concepts, stories or scenarios.
-
-</Column>
-
-</Row>
-
-<Row class="narrativeTable">
-
-<Column colLg={4} noGutter>
-
-### Nimble
-
-</Column>
-
-<Column colLg={8} noGutter>
-
-IBM illustrations should display a sense of ease, lightness and nimbleness. This
-nimble sense of composition, space, weight and orderliness will help the viewer
-intake complexity with ease. A nimble quality also adds a great sense of
-activity and liveliness in the illustration.
-
-</Column>
-
-</Row>
-
-<Row class="narrativeTable">
-
-<Column colLg={4} noGutter>
-
-### Diverse
-
-</Column>
-
-<Column colLg={8} noGutter>
-
-We take great pride in our commitment to diversity and inclusion and IBM
-illustrations should be created in the same spirit. Gender, cultural and
-geographical diversity should always be considered when creating illustrations
-so that we strive for inclusion, representation and accessibility for all.
-
-</Column>
-
-</Row>
-
-<Row class="narrativeTableLast">
-
-<Column colLg={4} noGutter>
-
-### Delightful
-
-</Column>
-
-<Column colLg={8} noGutter>
-
-IBM illustrations should carry a sense of wonder and delight. While
-illustrations are primarily used to explain or convey meaning, their delivery
-can be more lighthearted at times. Lightheartedness means adding a sense of fun
-that isn't overly humorous, but spirited, charming and appropriate for the
-situation.
-
-</Column>
-
-</Row>
-</div>
