docs: add okrs to roadmap page (#1979)
* docs: add okrs to roadmap page

- remove erroneous fathom goal

* Update src/pages/whats-happening/changelog-and-roadmap/index.mdx

Co-authored-by: TJ Egan <tw15egan@gmail.com>

* Update src/pages/whats-happening/changelog-and-roadmap/index.mdx

Co-authored-by: TJ Egan <tw15egan@gmail.com>

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/whats-happening/changelog-and-roadmap/index.mdx
+++ b/src/pages/whats-happening/changelog-and-roadmap/index.mdx
@@ -17,7 +17,6 @@ Carbon’s future.
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
-    onClick={() => fathom.trackGoal('P0OEN9TS', 0)}
     subTitle="Changelog"
     href="https://github.com/carbon-design-system/carbon/releases">
     <MdxIcon name="github" />
@@ -25,9 +24,31 @@ Carbon’s future.
 </Column>
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
-    onClick={() => fathom.trackGoal('P0OEN9TS', 0)}
     subTitle="Roadmap"
     href="https://app.zenhub.com/workspaces/system-squad-593830641344b813db10934d/roadmap">
+
+![ZenHub icon](images/z-icon.svg)
+
+  </ResourceCard>
+</Column>
+</Row>
+
+## Carbon team
+
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="Team 2020 Q4 OKRs"
+    href="https://app.zenhub.com/workspaces/okrs-5eef636e504e9d001694ba22/roadmap">
+
+![ZenHub icon](images/z-icon.svg)
+
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="Squad 2020 Q4 OKRs"
+    href="https://app.zenhub.com/workspaces/okrs-5eef636e504e9d001694ba22/board?labels=squad%3A%20system&milestones=2020Q4%232020-12-31&useDefaultFilterLogic=false&repos=273306655&showPRs=false&showEstimates=false&showReleases=false&showDependencies=false">
 
 ![ZenHub icon](images/z-icon.svg)
 
