docs: restructuring guidance pages

--- a/src/pages/guidelines/content/action-labels.mdx
+++ b/src/pages/guidelines/content/action-labels.mdx
@@ -7,7 +7,7 @@ description:
   Users rely on consistent labels for common actions to predict how to interact
   with an interface. This list includes the common UI terms and recommended
   action labels for use in IBM UI content and documentation.
-tabs: ['Overview', 'Writing style', 'Content patterns', 'Action labels']
+tabs: ['Overview', 'Writing style', 'Action labels']
 ---
 
 import GlossaryComponent from 'components/GlossaryComponent';
