--- a/src/pages/guidelines/content/overview.mdx
+++ b/src/pages/guidelines/content/overview.mdx
@@ -7,7 +7,7 @@ description:
   content guidelines have been developed from real-life examples to ensure the
   words in your product interfaces and documentation create the best possible
   experience for your users.
-tabs: ['Overview', 'Writing style', 'Content patterns', 'Action labels']
+tabs: ['Overview', 'Writing style', 'Action labels']
 ---
 
 <PageDescription>
@@ -22,9 +22,8 @@ is writing or reviewing copy in IBM product interfaces.
 
 <AnchorLink>Content foundations</AnchorLink>
 <AnchorLink>Voice and tone</AnchorLink>
-<AnchorLink>Inclusive terminology</AnchorLink>
 <AnchorLink>Writing for accessibility</AnchorLink>
-<AnchorLink>Questions</AnchorLink>
+<AnchorLink>Questions and feedback</AnchorLink>
 
 </AnchorLinks>
 
@@ -37,12 +36,12 @@ and that represent IBM as a company.
 The Carbon content guidelines are built upon and informed by the following
 foundational IBM assets.
 
-| Resources                                                                                                       | What you'll find                                                                                                                                                                                                                                                                     |
-| --------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| _[IBM Style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa)_ | IBM Style is the corporate reference for all IBM writers and editors and applies to all content published by IBM. Its purpose is to ensure that content for external audiences is grammatically correct, clear, consistent, appropriate for global audiences, and easy to translate. |
-| _[IBM Design Language](https://www.ibm.com/design/language/)_                                                   | The IBM Design Language provides the guidance and assets used to express the IBM brand. You'll fully understand what drives IBM’s design philosophy and principles, and be in a position to make informed choices for your product work.                                             |
-| _[IBM Brand Center](https://www.ibm.com/brand/definition)_                                                      | IBM Brand Center is the home base for the IBM Brand story, visual brand elements, guidelines, and assets.                                                                                                                                                                            |
-| _[IBM Brand Systems](https://www.ibm.com/brand/systems/)_                                                       | The IBM brand systems have been developed for various IBM businesses, audiences, categories, and offerings. Read them to understand the rationale behind every visual and verbal detail, so that the guidance may inform your work.                                                  |
+| Resources                                                                                                       | What you'll find                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+| --------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _[IBM Style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa)_ | IBM Style is the corporate reference for all IBM writers and editors and applies to all content published by IBM. Its purpose is to ensure that content for external audiences is grammatically correct, clear, consistent, appropriate for global audiences, and easy to translate. External audiences can see this guidance in [The IBM Style Guide: Conventions for Writers and Editors](https://learning.oreilly.com/library/view/the-ibm-style/9780132118989/) (IBM Press, 2011). |
+| _[IBM Design Language](https://www.ibm.com/design/language/)_                                                   | The IBM Design Language provides the guidance and assets used to express the IBM brand. You'll fully understand what drives IBM’s design philosophy and principles, and be in a position to make informed choices for your product work.                                                                                                                                                                                                                                               |
+| _[IBM Brand Center](https://www.ibm.com/brand/definition)_                                                      | IBM Brand Center is the home base for the IBM Brand story, visual brand elements, guidelines, and assets.                                                                                                                                                                                                                                                                                                                                                                              |
+| _[IBM Brand Systems](https://www.ibm.com/brand/systems/)_                                                       | The IBM brand systems have been developed for various IBM businesses, audiences, categories, and offerings. Read them to understand the rationale behind every visual and verbal detail.                                                                                                                                                                                                                                                                                               |
 
 ## Voice and tone
 
@@ -53,8 +52,8 @@ or written, one of the most important characteristics of IBM is our unique brand
 voice. Our verbal identity must remain as recognizable to everyone as our visual
 identity.
 
-Understanding IBM's personality can help you reach for the best words as you
-develop content.
+Understanding IBM's personality and voice will help you reach for the best words
+as you develop content.
 
 IBM Brand Center offers the following guidelines on voice.
 
@@ -85,36 +84,6 @@ full sentences and friendly explanations.
 The underlying voice in each case is consistent but with different word choices
 and a different sentence structure, the style and tone adapts.
 
-## Inclusive terminology
-
-It is critical that all words used in any capacity in product offerings be
-inclusive in its language.
-
-The following terms represent guidance that content designers can use to improve
-the inclusiveness of our offerings:
-
-- The terms "blacklist" and "whitelist" are prohibited for future use. Instead,
-  use the terms "blocklist" and "allowlist". To refer to the action of adding
-  items to a blocklist or allowlist, use the verbs "block" and "allow".
-- The term "slave" is prohibited in all IBM content, along with the term
-  "master" in the sense of "superior". Instead of slave, use another term such
-  as "worker", "child", "helper", "replica", or "secondary". Instead of
-  "master," use a term such as "controller", "leader", "manager", "main",
-  "coordinator", "parent", or "primary".
-- When you must refer to prohibited terms because they occur in a product from
-  another company, make it clear that these terms are not from IBM. Use the
-  verbs "block" and "allow" to refer to the action of adding items to another
-  company's "blacklist" or "whitelist".
-
-Refer to the [IBM Terminology database](http://ibm.biz/termsearch) for more
-information.
-
-Anyone at
-IBM can [submit a term for review](http://tlwi.w3-969.ibm.com/standards/terminology/feedbackform2.html).
-
-For more information, see
-the [Inclusive IT Terminology](https://w3.ibm.com/w3publisher/inclusive-it-terminology/take-action) site.
-
 ## Writing for accessibility
 
 For detailed guidance about writing for all users, please read the
@@ -132,7 +101,7 @@ Further guidance can be found in the
 [Web Content Accessibility](https://www.w3.org/WAI/standards-guidelines/wcag/)
 [guidelines](https://www.w3.org/TR/WCAG21/).
 
-## Questions
+## Questions and feedback
 
 If there's something you need and cannot find, or if you need clarification
 about a particular use case, you can ask questions in the
