--- a/src/pages/guidelines/content/writing-style.mdx
+++ b/src/pages/guidelines/content/writing-style.mdx
@@ -4,7 +4,7 @@ description:
   Writing should always be simple, clear, and easy to understand. Using everyday
   language keeps the tone friendly, human, and inviting. And choose short words
   over long impressive-sounding words. Put the thesaurus away!
-tabs: ['Overview', 'Writing style', 'Content patterns', 'Action labels']
+tabs: ['Overview', 'Writing style', 'Action labels']
 ---
 
 <PageDescription>
@@ -19,10 +19,10 @@ over long impressive-sounding words. Put the thesaurus away!
 
 <AnchorLink>Capitalization</AnchorLink>
 <AnchorLink>Simple writing</AnchorLink>
+<AnchorLink>Conversational style</AnchorLink>
+<AnchorLink>Inclusive terminology</AnchorLink>
 <AnchorLink>Pronouns</AnchorLink>
 <AnchorLink>Active and passive voice</AnchorLink>
-<AnchorLink>Conversational style</AnchorLink>
-<AnchorLink>Can, may, and might</AnchorLink>
 
 </AnchorLinks>
 
@@ -292,71 +292,6 @@ of words.
 If you need to use past or future tense, avoid verb tenses with the words have,
 has, had, been, should, would, and will.
 
-## Pronouns
-
-Engage your readers by using second person (you, your) where appropriate. Avoid
-the first person unless you have a compelling reason to use it. First person (I,
-we, our) focuses on the writer rather than the audience, which is rarely
-appropriate in UI or technical contexts.
-
-One exception to this is in the case of possessive adjectives in the UI. You can
-use first person in headings or labels that are very specific to the user or
-customer data, for example “My account” or “My usage.” However, in explanatory
-text for the heading or label, switch to second person. For example, “Your usage
-is calculated from the 1st day of the month.”
-
-Where appropriate, use first person ("we", "our") to refer to IBM.
-
-For more detailed guidance about pronouns, refer to the
-[Pronouns](https://www-03preprod.ibm.com/support/knowledgecenter/ibm_style/pronouns.html)
-topic in IBM Style.
-
-## Active and passive voice
-
-The _active voice_ is direct and punchy, and emphasizes the subject of the
-sentence. The subject clearly “acts upon” the verb (hence, “active”). For
-example, “John ate the apple”. In situations where either voice will work,
-generally choose the active voice for more directness.
-
-<DoDontRow>
-  <DoDont
-    caption="Do use active voice when appropriate."
-    text="Next, the admin configures access privileges."
-    aspectRatio="1:1"
-  />
-  <DoDont
-    type="dont"
-    caption="Don’t use passive voice when active voice will suffice."
-    text="Next, access privileges are configured by the admin."
-    aspectRatio="1:1"
-  />
-</DoDontRow>
-
-The _passive voice_, on the other hand, flips the construction so that the
-subject is secondary to the verb and object (hence, “passive”). Often, the
-subject is not even included in the sentence. For example, “_The apple was eaten
-by John_” or just “_The apple was eaten_”. Only sentences that contain direct
-objects can be constructed in the passive voice. Thus, “_John ate_” cannot be
-constructed passively.
-
-The passive voice makes for a more natural tone in certain use cases. For
-example, if the true subject of the sentence is a system, and the human is
-secondary, passive voice can be acceptable.
-
-<DoDontRow>
-  <DoDont
-    caption="Do use passive voice when appropriate."
-    text="The database needs to be rebooted."
-    aspectRatio="1:1"
-  />
-  <DoDont
-    type="dont"
-    caption="Don’t use active voice when passive voice is more appropriate."
-    text="Someone needs to reboot the database."
-    aspectRatio="1:1"
-  />
-</DoDontRow>
-
 ## Conversational style
 
 To set the appropriate tone and conversation level, it helps to imagine the user
@@ -376,40 +311,19 @@ everyday language, not jargon. And choose short words to make the reading
 faster, rather than long impressive-sounding words. Put the thesaurus away!
 
 IBM Style offers more guidelines on
-[conversation style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa/page/Conversational%20style).
+[conversational style](https://www-03preprod.ibm.com/support/knowledgecenter/ibm_style/conversational-style.html).
 
-## First and second person
-
-Engage your readers by using second person **(you, your)** where appropriate.
-First person **(I, we, our)** focuses on the writer rather than the audience,
-which is rarely appropriate in UI or technical contexts. Avoid the first person
-unless you have a compelling reason to use it.
-
-One exception to this is in the case of possessive adjectives in the UI. You can
-use first person in headings or labels that are very specific to the user or
-customer data, such as “My Account” or “My Usage”. In explanatory text for the
-heading or label, however, use second person. For example, _“Your usage is
-calculated from the first day of the month”._
-
-## Formal vs. casual tone
+### Formal versus casual tone
 
 While a more formal tone is often appropriate for technical and business
 writing, a more casual tone is becoming increasingly accepted (and expected) in
 UI and supporting materials.
 
-- Don't be afraid to use **contractions**. When they fit the context and improve
-  flow, go for it.
-- Beginning sentences with **and, but, or so** is not always forbidden. When it
-  allows for shorter, scannable sentences, they can be used. Do not overuse
-  these devices, especially in instructional content. For example, _“You can
-  deploy an app to the cloud during lunch hour. But it's not required.”_ works
-  for _Discover, Try, Buy_ experiences.
-- It's acceptable to use **questions in headings**. In both UIs and
-  documentation, questions can be used to further conversational style. But
-  don't overuse them, as they can add to noise. Make sure headings that use
-  questions are meaningful. In a UI, questions can also be used in a
-  confirmation prompt in a dialog box. For example, _“Do you want to close
-  without saving?”_
+- Don't be afraid to use **contractions** when they fit the context and improve
+  the flow.
+- Beginning sentences with **and**, **but**, or **so** is not always forbidden.
+  When it allows for shorter scannable sentences they can be used, but do not
+  overuse these devices.
 - Use **exclamation marks** only positively, not negatively. Make sure you use
   no more than one exclamation mark in a context, such as a single window or a
   single Docs topic.
@@ -448,7 +362,7 @@ and “thank you” carefully.
   />
 </DoDontRow>
 
-## Can, may, and might
+### Can, may, and might
 
 #### Terms of ability
 
@@ -489,9 +403,103 @@ work, generally go with “might” to avoid confusion with the multiple meaning
   />
 </DoDontRow>
 
-## References
+## Inclusive terminology
 
-Eric Radzinski, Leslie McDonald, Amy Laird, Jana Jenkins, Peter Hayward, and
-Francis DeRespinis,
-[The IBM Style Guide: Conventions for Writers and Editors](https://learning.oreilly.com/library/view/the-ibm-style/9780132118989/),
-(IBM Press, 2011)
+It is critical that all words used in any capacity in product offerings be
+inclusive in its language.
+
+The following terms represent guidance that content designers can use to improve
+the inclusiveness of our offerings:
+
+- The terms "blacklist" and "whitelist" are prohibited for future use. Instead,
+  use the terms "blocklist" and "allowlist". To refer to the action of adding
+  items to a blocklist or allowlist, use the verbs "block" and "allow".
+- The term "slave" is prohibited in all IBM content, along with the term
+  "master" in the sense of "superior". Instead of slave, use another term such
+  as "worker", "child", "helper", "replica", or "secondary". Instead of
+  "master," use a term such as "controller", "leader", "manager", "main",
+  "coordinator", "parent", or "primary".
+- When you must refer to prohibited terms because they occur in a product from
+  another company, make it clear that these terms are not from IBM. Use the
+  verbs "block" and "allow" to refer to the action of adding items to another
+  company's "blacklist" or "whitelist".
+
+Other considerations apply for inclusive writing, including to avoid gender
+bias. As an example, do not assume that the subject of a sentence is male if the
+context might refer to any gender. Thus, instead of using "man hours", use
+"labor hours" or "person hours". Sometimes, you can rewrite a sentence to use
+the second person ("you"). For example, instead of writing "The user can now
+move his cursor in four directions", write "You can now move your cursor in four
+directions". It is also acceptable to use "they" to refer to a singular subject.
+
+If you're not sure about a particular word, you can search the
+[IBM Terminology database](http://ibm.biz/termsearch). And anyone at
+IBM can [submit a term for review](http://tlwi.w3-969.ibm.com/standards/terminology/feedbackform2.html).
+
+For more information about this important work, see
+the [Inclusive IT Terminology](https://w3.ibm.com/w3publisher/inclusive-it-terminology/take-action) site.
+
+## Pronouns
+
+Engage your readers by using second person (you, your) where appropriate. Avoid
+the first person unless you have a compelling reason to use it. First person (I,
+we, our) focuses on the writer rather than the audience, which is rarely
+appropriate in UI or technical contexts.
+
+One exception to this is in the case of possessive adjectives in the UI. You can
+use first person in headings or labels that are very specific to the user or
+customer data, for example “My account” or “My usage.” However, in explanatory
+text for the heading or label, switch to second person. For example, “Your usage
+is calculated from the 1st day of the month.”
+
+Where appropriate, use first person ("we", "our") to refer to IBM.
+
+For more detailed guidance about pronouns, refer to the
+[Pronouns](https://www-03preprod.ibm.com/support/knowledgecenter/ibm_style/pronouns.html)
+topic in IBM Style.
+
+## Active and passive voice
+
+The _active voice_ is direct and emphasizes the subject of the sentence. The
+subject clearly “acts upon” the verb (hence, “active”). For example, “John ate
+the apple”. In situations where either voice will work, generally choose the
+active voice for more directness.
+
+<DoDontRow>
+  <DoDont
+    caption="Do use active voice when appropriate."
+    text="Next, the admin configures access privileges."
+    aspectRatio="1:1"
+  />
+  <DoDont
+    type="dont"
+    caption="Don’t use passive voice when active voice will suffice."
+    text="Next, access privileges are configured by the admin."
+    aspectRatio="1:1"
+  />
+</DoDontRow>
+
+The _passive voice_, on the other hand, flips the construction so that the
+subject is secondary to the verb and object (hence, “passive”). Often, the
+subject is not even included in the sentence. For example, “_The apple was eaten
+by John_” or just “_The apple was eaten_”. Only sentences that contain direct
+objects can be constructed in the passive voice. Thus, “_John ate_” cannot be
+constructed passively.
+
+The passive voice makes for a more natural tone in certain use cases. For
+example, if the true subject of the sentence is a system, and the human is
+secondary, passive voice can be acceptable.
+
+<DoDontRow>
+  <DoDont
+    caption="Do use passive voice when appropriate."
+    text="The database needs to be rebooted."
+    aspectRatio="1:1"
+  />
+  <DoDont
+    type="dont"
+    caption="Don’t use active voice when passive voice is more appropriate."
+    text="Someone needs to reboot the database."
+    aspectRatio="1:1"
+  />
+</DoDontRow>
