docs: identifying internal and external content

--- a/src/pages/guidelines/content/overview.mdx
+++ b/src/pages/guidelines/content/overview.mdx
@@ -24,6 +24,7 @@ is writing or reviewing copy in IBM product interfaces.
 <AnchorLink>Voice and tone</AnchorLink>
 <AnchorLink>Writing for accessibility</AnchorLink>
 <AnchorLink>Questions and feedback</AnchorLink>
+<AnchorLink>References</AnchorLink>
 
 </AnchorLinks>
 
@@ -36,12 +37,14 @@ and that represent IBM as a company.
 The Carbon content guidelines are built upon and informed by the following
 foundational IBM assets.
 
-| Resources                                                                                                       | What you'll find                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
-| --------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| _[IBM Style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa)_ | IBM Style is the corporate reference for all IBM writers and editors and applies to all content published by IBM. Its purpose is to ensure that content for external audiences is grammatically correct, clear, consistent, appropriate for global audiences, and easy to translate. External audiences can see this guidance in [The IBM Style Guide: Conventions for Writers and Editors](https://learning.oreilly.com/library/view/the-ibm-style/9780132118989/) (IBM Press, 2011). |
-| _[IBM Design Language](https://www.ibm.com/design/language/)_                                                   | The IBM Design Language provides the guidance and assets used to express the IBM brand. You'll fully understand what drives IBM’s design philosophy and principles, and be in a position to make informed choices for your product work.                                                                                                                                                                                                                                               |
-| _[IBM Brand Center](https://www.ibm.com/brand/definition)_                                                      | IBM Brand Center is the home base for the IBM Brand story, visual brand elements, guidelines, and assets.                                                                                                                                                                                                                                                                                                                                                                              |
-| _[IBM Brand Systems](https://www.ibm.com/brand/systems/)_                                                       | The IBM brand systems have been developed for various IBM businesses, audiences, categories, and offerings. Read them to understand the rationale behind every visual and verbal detail.                                                                                                                                                                                                                                                                                               |
+_Some of this content is accessible to IBMers only._
+
+| Resources                                                                                                       | What you'll find                                                                                                                                                                                                                                                                     |
+| --------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| _[IBM Style](https://apps.na.collabserv.com/wikis/home?lang=en-us#!/wiki/W580a84a67242_4da6_81cf_69e3db4bdbfa)_ | IBM Style is the corporate reference for all IBM writers and editors and applies to all content published by IBM. Its purpose is to ensure that content for external audiences is grammatically correct, clear, consistent, appropriate for global audiences, and easy to translate. |
+| _[IBM Design Language](https://www.ibm.com/design/language/)_                                                   | The IBM Design Language provides the guidance and assets used to express the IBM brand. You'll fully understand what drives IBM’s design philosophy and principles, and be in a position to make informed choices for your product work.                                             |
+| _[IBM Brand Center](https://www.ibm.com/brand/definition)_                                                      | IBM Brand Center is the home base for the IBM Brand story, visual brand elements, guidelines, and assets.                                                                                                                                                                            |
+| _[IBM Brand Systems](https://www.ibm.com/brand/systems/)_                                                       | The IBM brand systems have been developed for various IBM businesses, audiences, categories, and offerings. Read them to understand the rationale behind every visual and verbal detail.                                                                                             |
 
 ## Voice and tone
 
@@ -108,3 +111,9 @@ about a particular use case, you can ask questions in the
 [Carbon Slack channel](#carbon-design-system), open a Github issue, or connect
 with us in one of our
 [meetups](https://www.carbondesignsystem.com/whats-happening/meetups).
+
+## References
+
+External audiences can see the IBM Style guidance in
+[The IBM Style Guide: Conventions for Writers and Editors](https://learning.oreilly.com/library/view/the-ibm-style/9780132118989/)
+(IBM Press, 2011).
