Add gifs to documentation

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -266,10 +266,25 @@ respectively.
 ![Alternative left panel width of 320px](images/WideTearsheetAlternateWidth.jpg)
 
 <Caption>Alternative left panel width of 320px</Caption>
+
 </Column>
 </Row>
 
-### Behaviors, structure and functionality
+### Behaviors
+
+<Row>
+<Column colLg={8}>
+
+<GifPlayer>
+  
+![Wide tearsheet animated Create flow](/images/WideTearsheetAnimated.gif)
+
+</GifPlayer>
+
+<Caption>Animated illustration of the Create flow in a Wide tearsheet</Caption>
+
+</Column>
+</Row>
 
 Wide tearsheet Create flows can include an optional Toggle to show all the steps
 on a single scrolling page with anchor links. Toggling to "Show all available
@@ -277,8 +292,7 @@ options" will replace the progress indicator with the In-page navigation anchor
 links. Depending on your use case, you may choose to persist the toggle to show
 all options for a particular Create flow if it will enhance the user experience.
 
-If the user toggles off the advanced options and there could be destructive
-consequences, show a modal alerting them that the changes won't be saved.
+
 
 <Row>
 <Column colLg={8}>
@@ -286,6 +300,7 @@ consequences, show a modal alerting them that the changes won't be saved.
 ![Toggle view - show all available options](images/WideTearsheetShowAllOptions.jpg)
 
 <Caption>Toggle view - show all available options</Caption>
+
 </Column>
 </Row>
 
@@ -297,6 +312,23 @@ consequences, show a modal alerting them that the changes won't be saved.
 3. **Footer & scrolling**: The button footer is sticky and has a dividing line
    on top. The form content appears from underneath the sticky footer. There is
    no gradient.
+
+<Row>
+<Column colLg={8}>
+
+<GifPlayer>
+  
+![Wide tearsheet animated options toggle](/images/WideTearsheetShowAllOptionsAnimated.gif)
+
+</GifPlayer>
+
+<Caption>Animated illustration of the "Show all available options" toggle behavior.</Caption>
+
+</Column>
+</Row>
+
+If the user toggles off the advanced options and there could be destructive
+consequences, show a modal alerting them that the changes won't be saved.
 
 <Row>
 <Column colLg={8}>
